--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6487,7 +6487,32 @@ a.close.disabled {
 .bg-primary {
     background-color: #05083b !important;
 }
+.avatar {
+    display: inline-flex;
+    border-radius: 50%;
+    text-align: center;
+    vertical-align: middle;
+    position: relative;
+}
 
+.avatar .avatar-content {
+    width: 40px;
+    height: 40px;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.875rem;
+}
+.avatar .avatar-status {
+    width: 0.7rem;
+    height: 0.7rem;
+    position: absolute;
+    border-radius: 50%;
+    border: 1px solid #fff;
+    bottom: 0;
+    right: 0;
+}
 a.bg-primary:hover,
 a.bg-primary:focus,
 button.bg-primary:hover,
